tests/contract_testcases/polkadot/variables/global_constants.sol
uint x = 102;
// ---- Expect: diagnostics ----
// error: 1:1-5: global variable must be constant
